fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,15 @@
 @import 'tailwindcss';
 @plugin "daisyui";
 
+@variant dark (&:where(.dark *));
+
 /* Optional: import Nextra theme styles */
 @import 'nextra-theme-docs/style.css';
 /* or nextra-theme-blog/style.css */
 
-@variant dark (&:where(.dark *));
 
-.mockup-code::before {
-  content: none !important; 
-  display: none !important;
-}
+/* .mockup-code::before { */
+/*   content: none !important;  */
+/*   display: none !important; */
+/* } */
 
